#ifndef SYSTEM_HPP
#define SYSTEM_HPP

#include <ExternalLibraries.hpp>

class System {
    private:
        std::string storeName;
};

#endif
